# wdreconcile

./: .gitignore  README.md  openrefine.py  pyproject.toml  reconciler.py  test.json  test.txt  wdreconcile.py  wdsearch.py
src/wdreconcile/: console.py  openrefine.py  reconciler.py  wdentity.py  wdfullsearch.py  wdsearch.py  wmentity.py
test/: .gitignore  museums.txt  test.sh
test/input/: museum-qids.csv  museums.txt
